--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -668,6 +668,9 @@
     <ClCompile Include="Game\Objects\GameScene\SpriteEffect\FadeSprite.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Game\Camera\EndGame\EndGameCamera.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Asset\AnimationManager.h" />
@@ -929,6 +932,7 @@
     <ClInclude Include="Game\Scene\GameState\GameSceneState.h" />
     <ClInclude Include="Game\Camera\BeginGame\BeginGameCamera.h" />
     <ClInclude Include="Game\Objects\GameScene\SpriteEffect\FadeSprite.h" />
+    <ClInclude Include="Game\Camera\EndGame\EndGameCamera.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\PostProcess\Copy\CopyTexture.CS.hlsl" />
