--- a/Project/Assets/Engine/ShaderData/Sprite/ApplyPostProcessObject2D.json
+++ b/Project/Assets/Engine/ShaderData/Sprite/ApplyPostProcessObject2D.json
@@ -38,7 +38,7 @@
     ],
     "PipelineState":[
         {
-            "BlendMode": "NONE",
+            "BlendMode": "ALL",
             "TopologyType": "TRIANGLE",
             "DSVFormat": "D24_UNORM_S8_UINT",
             "RTVFormats": "R32G32B32A32_FLOAT"
