--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -671,6 +671,9 @@
     <ClCompile Include="Game\Camera\EndGame\EndGameCamera.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Game\Objects\GameScene\Enemy\Boss\HUD\BossEnemyAttackSign.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Asset\AnimationManager.h" />
@@ -933,6 +936,7 @@
     <ClInclude Include="Game\Camera\BeginGame\BeginGameCamera.h" />
     <ClInclude Include="Game\Objects\GameScene\SpriteEffect\FadeSprite.h" />
     <ClInclude Include="Game\Camera\EndGame\EndGameCamera.h" />
+    <ClInclude Include="Game\Objects\GameScene\Enemy\Boss\HUD\BossEnemyAttackSign.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\PostProcess\Copy\CopyTexture.CS.hlsl" />
