--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -530,7 +530,7 @@
     <ClCompile Include="Engine\Effect\Trail\Core\GPUTrailEffectUpdater.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="Engine\Effect\GameEffect.cpp">
+    <ClCompile Include="Engine\Effect\Game\GameEffect.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="Engine\Effect\Particle\System\ParticleSystem.cpp">
@@ -675,6 +675,12 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="Game\Objects\GameScene\Enemy\Boss\State\States\BossEnemyContinuousAttackState.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Effect\Game\Helper\GameEffectCommandHelper.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Game\Objects\GameScene\Enemy\Boss\Effect\BossEnemyAnimationEffect.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
@@ -873,7 +879,7 @@
     <ClInclude Include="Engine\Effect\Trail\Structures\TrailEffectStructures.h" />
     <ClInclude Include="Engine\Effect\Trail\Core\TrailEffectRenderer.h" />
     <ClInclude Include="Engine\Effect\Trail\Core\GPUTrailEffectUpdater.h" />
-    <ClInclude Include="Engine\Effect\GameEffect.h" />
+    <ClInclude Include="Engine\Effect\Game\GameEffect.h" />
     <ClInclude Include="Engine\Effect\Particle\ParticleConfig.h" />
     <ClInclude Include="Engine\Utility\EnumAdapter.h" />
     <ClInclude Include="Engine\Effect\Particle\Structures\ParticleStructures.h" />
@@ -941,6 +947,8 @@
     <ClInclude Include="Game\Camera\EndGame\EndGameCamera.h" />
     <ClInclude Include="Game\Objects\GameScene\Enemy\Boss\HUD\BossEnemyAttackSign.h" />
     <ClInclude Include="Game\Objects\GameScene\Enemy\Boss\State\States\BossEnemyContinuousAttackState.h" />
+    <ClInclude Include="Engine\Effect\Game\Helper\GameEffectCommandHelper.h" />
+    <ClInclude Include="Game\Objects\GameScene\Enemy\Boss\Effect\BossEnemyAnimationEffect.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\PostProcess\Copy\CopyTexture.CS.hlsl" />
