クリアシーン用のカメラを作成、ブランチ分けるの忘れた

--- a/Project/DirectXGame.vcxproj
+++ b/Project/DirectXGame.vcxproj
@@ -648,6 +648,10 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Game\Camera\ResultCamera\ClearResultCamera.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Game\Editor\GameObjectEditor.cpp">
       <SubType>
       </SubType>
@@ -1480,6 +1484,10 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
       </SubType>
     </ClInclude>
     <ClInclude Include="Game\Camera\Manager\CameraManager.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Game\Camera\ResultCamera\ClearResultCamera.h">
       <SubType>
       </SubType>
     </ClInclude>
