--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -695,6 +695,9 @@
     <ClCompile Include="Game\Objects\GameScene\Player\State\States\PlayerAttack_4thState.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Game\Camera\ResultCamera\ClearResultCamera.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Asset\AnimationManager.h" />
@@ -965,6 +968,7 @@
     <ClInclude Include="Game\Objects\GameScene\Enemy\Boss\Effect\BossEnemyBladeEffect.h" />
     <ClInclude Include="Game\Objects\GameScene\Player\Effect\PlayerAnimationEffect.h" />
     <ClInclude Include="Game\Objects\GameScene\Player\State\States\PlayerAttack_4thState.h" />
+    <ClInclude Include="Game\Camera\ResultCamera\ClearResultCamera.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\PostProcess\Copy\CopyTexture.CS.hlsl" />
