リザルト画面の背景にグレースケールをかけた

--- a/Project/DirectXGame.vcxproj
+++ b/Project/DirectXGame.vcxproj
@@ -839,10 +839,6 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
       <SubType>
       </SubType>
     </ClCompile>
-    <ClCompile Include="Game\Scene\ClearScene.cpp">
-      <SubType>
-      </SubType>
-    </ClCompile>
     <ClCompile Include="Game\Scene\EffectScene.cpp">
       <SubType>
       </SubType>
@@ -859,6 +855,10 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
       </SubType>
     </ClCompile>
     <ClCompile Include="Game\Scene\GameState\States\BeginGameState.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Game\Scene\GameState\States\ResultGameState.cpp">
       <SubType>
       </SubType>
     </ClCompile>
@@ -1685,10 +1685,6 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
       <SubType>
       </SubType>
     </ClInclude>
-    <ClInclude Include="Game\Scene\ClearScene.h">
-      <SubType>
-      </SubType>
-    </ClInclude>
     <ClInclude Include="Game\Scene\EffectScene.h">
       <SubType>
       </SubType>
@@ -1717,6 +1713,10 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
       </SubType>
     </ClInclude>
     <ClInclude Include="Game\Scene\GameState\States\BeginGameState.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Game\Scene\GameState\States\ResultGameState.h">
       <SubType>
       </SubType>
     </ClInclude>
