--- a/Project/Externals/imgui/Project/imgui/imgui.vcxproj
+++ b/Project/Externals/imgui/Project/imgui/imgui.vcxproj
@@ -128,6 +128,7 @@
   <ItemGroup>
     <ClInclude Include="..\..\imconfig.h" />
     <ClInclude Include="..\..\imgui.h" />
+    <ClInclude Include="..\..\ImGuizmo.h" />
     <ClInclude Include="..\..\imgui_impl_dx12.h" />
     <ClInclude Include="..\..\imgui_impl_win32.h" />
     <ClInclude Include="..\..\imgui_internal.h" />
@@ -137,6 +138,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\imgui.cpp" />
+    <ClCompile Include="..\..\ImGuizmo.cpp" />
     <ClCompile Include="..\..\imgui_demo.cpp" />
     <ClCompile Include="..\..\imgui_draw.cpp" />
     <ClCompile Include="..\..\imgui_impl_dx12.cpp" />
