--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -701,6 +701,9 @@
     <ClCompile Include="Game\Objects\GameScene\Result\GameResultDisplay.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Engine\Core\Graphics\GPUObject\GPUPixelPicker.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Asset\AnimationManager.h" />
@@ -974,6 +977,8 @@
     <ClInclude Include="Game\Scene\GameState\States\ResultGameState.h" />
     <ClInclude Include="Game\Objects\GameScene\Result\GameResultDisplay.h" />
     <ClInclude Include="Engine\Core\Graphics\PostProcess\PostProcessConfig.h" />
+    <ClInclude Include="Engine\Core\Graphics\GPUObject\GPUPixelPicker.h" />
+    <ClInclude Include="Engine\Core\Graphics\GPUObject\DxReadbackBuffer.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\PostProcess\Copy\CopyTexture.CS.hlsl" />
@@ -1002,6 +1007,7 @@
     <FxCompile Include="Assets\Engine\Shaders\PostProcess\Glitch\Glitch.CS.hlsl" />
     <FxCompile Include="Assets\Engine\Shaders\Particle\GPUParticle\CS\Update\NoiseUpdateParticle.CS.hlsl" />
     <FxCompile Include="Assets\Engine\Shaders\PostProcess\CRTDisplay\CRTDisplay.CS.hlsl" />
+    <FxCompile Include="Assets\Engine\Shaders\Mesh\CS\PickMeshInstance.CS.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Engine\Shaders\Standard\StandardMSFunction.hlsli" />
