ピッキングしたIDがオブジェクトのIDと同じになるように修正

--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -335,6 +335,11 @@ Size=110,168
 IsChild=1
 Size=349,168
 
+[Window][DebugView]
+Pos=914,518
+Size=354,83
+Collapsed=0
+
 [Table][0x51D6F5EA,3]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
